--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" defer></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <title>{% block title %}{% endblock %}</title>
+        <script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
+        <!--<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">-->
     </head>
     <body>
+        {% block navbar %}{% endblock %}
+        {% include "registration.html" %}
+        {% include "ppl_residents.html" %}
         <div class="jumbotron">
             <div class="container-fluid">
             {% block body %}{% endblock %}
             </div>
         </div>
+        
     </body>
 </html>
