--- a/templates/planets.html
+++ b/templates/planets.html
@@ -1,26 +1,23 @@
 {% extends "layout.html" %}
 {% block title %}Planets{% endblock %}
+{% block navbar %}
+    {% include 'nav_bar.html' %}
+{% endblock %}
 {% block body %}
-<div class="row">
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    {% for planet_property_name in planet_properties_name %}
-                    <th>{{ planet_property_name }}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for planet_dataset in planets_result_set %}
-                <tr>
-                    {% for planet_property in planet_dataset %}
-                        <td>{{ planet_property }}</td>
-                    {% endfor %}
-                </tr>
+<script src="{{ url_for('static', filename='js/planets.js') }}" defer></script>
+<script src="{{ url_for('static', filename='js/residents.js') }}" defer></script>
+
+<div class="table-responsive">
+    <table class="table table-hover" id="planets_table">
+        <thead>
+            <tr>
+                {% for planet_property_name in planet_properties_name %}
+                <th>{{ planet_property_name }}</th>
                 {% endfor %}
-            </tbody>
-        </table>
-    </div>
+            </tr>
+        </thead>
+        <tbody id="planet">
+        </tbody>
+    </table>
 </div>
 {% endblock %}
