--- a/templates/planets.html
+++ b/templates/planets.html
@@ -16,7 +16,7 @@
                 {% endfor %}
             </tr>
         </thead>
-        <tbody id="planet">
+        <tbody id="planet" data-usersession="{{ session.username }}">
         </tbody>
     </table>
 </div>
