--- a/templates/registration.html
+++ b/templates/registration.html
@@ -8,25 +8,26 @@
                     <h4 class="modal-title">Registration</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <label for="username" class="control-label">Username</label>
-                        <input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username"/>
-                    </div>
+                    <form>
+                        <div class="form-group">
+                            <label for="username" class="control-label">Username</label>
+                            <input type="text" class="form-control" name="regUsername" id="username"  placeholder="Enter your Username"/>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="password" class="control-label">Password</label>
-                        <input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
-                    </div>
+                        <div class="form-group">
+                            <label for="password" class="control-label">Password</label>
+                            <input type="password" class="form-control" name="regPassword" id="password"  placeholder="Enter your Password"/>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="confirm" class="control-label">Confirm Password</label>
-                        <input type="password" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password"/>
-                    </div>
+                        <div class="form-group">
+                            <label for="confirm" class="control-label">Confirm Password</label>
+                            <input type="password" class="form-control" name="regConfirm" id="confirm"  placeholder="Confirm your Password"/>
+                        </div>
 
-                    <div class="form-group ">
-                        <a href="" target="_blank" type="button" id="button" class="btn btn-primary btn-lg login-button">Register</a>
-                    </div>
-                        
+                        <div class="form-group ">
+                            <a href="" target="blank" type="button" id="buttonRegist" class="btn btn-primary btn-lg" class="close" data-dismiss="modal">Registration</a>
+                        </div>
+                    </form>
                     </div>
                 </div>
             </div>
