--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -7,11 +7,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">SW Planets</a>
+            <a class="navbar-brand" href="/">SW Planets</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
+                <li class=""><a href="/">SW index</a></li>
+                <li class=""><a href="/list">SW Planets</a></li>
             </ul>
             {% if not session.username %}
             <form class="navbar-form navbar-right" role="form">
