--- a/templates/ppl_residents.html
+++ b/templates/ppl_residents.html
@@ -12,20 +12,23 @@
                         <table class="table table-hover">
                             <thead>
                                 <tr>
-                                    <th>Name</th>
-                                    <th>Height (m)</th>
-                                    <th>Mass (kg)</th>
-                                    <th>Skin color</th>
-                                    <th>Hair color</th>
-                                    <th>Eye color</th>
-                                    <th>Birth year</th>
-                                    <th>Gender</th>
+                                    <th class='text-center'>Name</th>
+                                    <th class='text-center'>Height (m)</th>
+                                    <th class='text-center'>Mass (kg)</th>
+                                    <th class='text-center'>Skin color</th>
+                                    <th class='text-center'>Hair color</th>
+                                    <th class='text-center'>Eye color</th>
+                                    <th class='text-center'>Birth year</th>
+                                    <th class='text-center'>Gender</th>
                                 </tr>
                             </thead>
                             <tbody id="residenceBody">
                             </tbody>
                         </table>
                     </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="close" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
