--- a/templates/registration.html
+++ b/templates/registration.html
@@ -25,7 +25,7 @@
                         </div>
 
                         <div class="form-group ">
-                            <a href="" target="blank" type="button" id="buttonRegist" class="btn btn-primary btn-lg" class="close" data-dismiss="modal">Registration</a>
+                            <a href="" target="blank" type="button" id="buttonRegist" class="btn btn-success btn-lg" class="close" data-dismiss="modal">Registration</a>
                         </div>
                     </form>
                     </div>
