--- a/templates/registration.html
+++ b/templates/registration.html
@@ -11,18 +11,23 @@
                     <form>
                         <div class="form-group">
                             <label for="username" class="control-label">Username</label>
-                            <input type="text" class="form-control" name="regUsername" id="username"  placeholder="Enter your Username"/>
+                            <input type="text" class="form-control" name="regUsername" id="username" 
+                                    pattern="[A-Za-z0-9]+" required minlength="3" maxlength="24" placeholder="Enter your Username"
+                                    title="Username should only contain letters and numbers min. length 3 character, max. length 24 character. e.g. John1"/>
                         </div>
 
                         <div class="form-group">
                             <label for="password" class="control-label">Password</label>
-                            <input type="password" class="form-control" name="regPassword" id="password"  placeholder="Enter your Password"/>
+                            <input type="password" class="form-control" name="regPassword" id="password" pattern="[A-Za-z0-9]+" required minlength="3" maxlength="24" placeholder="Enter your Password"
+                                    title="Password should only contain letters and numbers min. length 3 character, max. length 24 character. e.g. John1"/>
                         </div>
 
+                        <!-- TODO: confirmation with javascript
                         <div class="form-group">
                             <label for="confirm" class="control-label">Confirm Password</label>
                             <input type="password" class="form-control" name="regConfirm" id="confirm"  placeholder="Confirm your Password"/>
                         </div>
+                        -->
 
                         <div class="form-group ">
                             <a href="" target="blank" type="button" id="buttonRegist" class="btn btn-success btn-lg" class="close" data-dismiss="modal">Registration</a>
